fix(inventory): restore legacy location routes, close cross-site leak
Per user decision on the 6e reviewer's R-3 finding, the legacy
inventory-at-location routes deleted in T-6e-be-9 are restored rather
than removed: the documented compatibility-removal gate requires
access-log evidence of no legacy traffic plus a stabilization window
on a released version, which this unmerged branch can't satisfy. The
routes stay present and deprecated, guarded by the new trusted
LegacyMainSiteContextResolver so legacy URLs keep meaning MAIN without
becoming an authorization bypass.

LocationInventoryRepository.findByStorageLocation_Id's previously
recorded missing-filter trap is closed for real, carrying the same
parent-IS-NULL/non-CUSTOM-kuji-parent filter its findByLocation_Id
sibling always had.

GET /api/locations/with-counts (sites module) was found to be a live
cross-site data leak, not merely "resolves to MAIN" as previously
assumed. Fixed to resolve the caller's default site and delegate to
the existing scoped query.

Records the PR #327 merge-conflict resolution into dev.